--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "expo": "~38.0.8",
+    "expo-2d-context": "0.0.2",
+    "expo-asset": "~8.1.7",
+    "expo-gl": "~8.3.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-canvas": "^0.1.37",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^10.3.2"
+    "react-native-webview": "^10.3.2",
+    "regl": "^1.6.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
