--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-asset": "~8.1.7",
     "expo-gl": "~8.3.1",
     "expo-status-bar": "^1.0.2",
+    "expo-three": "^5.5.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -27,6 +28,7 @@
     "react-native-web": "~0.11.7",
     "react-native-webview": "^10.3.2",
     "regl": "^1.6.1",
+    "three": "^0.119.1",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
