[JDC-1] add image chat component

--- a/app.json
+++ b/app.json
@@ -17,10 +17,16 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.gamoc.imagechat",
+      "buildNumber": "1.0.0",
       "supportsTablet": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "android": {
+      "package": "com.gamoc.imagechat",
+      "versionCode": 1
     }
   }
 }
