--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^10.3.2",
+    "react-native-webview": "9.4.0",
     "regl": "^1.6.1",
     "three": "^0.119.1",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "firebase": "7.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
