--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
+    "@types/reflect-metadata": "^0.1.0",
     "expo": "~38.0.8",
     "expo-2d-context": "0.0.2",
     "expo-asset": "~8.1.7",
     "expo-gl": "~8.3.1",
     "expo-status-bar": "^1.0.2",
     "expo-three": "^5.5.1",
+    "firebase": "7.9.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -29,8 +31,7 @@
     "react-native-webview": "9.4.0",
     "regl": "^1.6.1",
     "three": "^0.119.1",
-    "uuid": "^8.3.0",
-    "firebase": "7.9.0"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
